fix: first-section and education layout on mobile devices

--- a/blocks/main/education-skills/education-skills.css
+++ b/blocks/main/education-skills/education-skills.css
@@ -13,10 +13,10 @@
   display: inline-block;
   width: 10px;
   height: 10px;
+  flex-shrink: 0;
   border-radius: 50%;
   margin: 10px;
   background-color: var(--accent-color);
-  flex-shrink: 0;
 }
 
 
@@ -24,9 +24,6 @@
   grid-area: education;
 }
 
-.ed-li {
-  line-height: 125%;
-}
 
 .ed-li:not(:last-child) {
   margin-bottom: 15px;
